# py-tv-renamer

./: .gitignore  README.md  pyproject.toml
test/: conftest.py  test_renamer.py  test_settings.py  test_util.py
tv_renamer/: __init__.py  __main__.py  app.py  default.json  gui.py  renamer.py  settings.py  util.py
