[project]
name        = "py-tv-renamer"
description = "TV Batch renamer"
version     = "0.0.0"
requires-python = ">= 3.11"

[project.optional-dependencies]
dev = [
    "pytest     ~= 9.0",
    "pytest-cov ~= 7.1",
    "ruff       ~= 0.15"
]

[project.scripts]
tv_renamer = "tv_renamer:run"

[tool.ruff.lint]
select = [
    "AIR",
    "ERA",
    "FAST",
    "YTT",
    "ANN",
    "ASYNC",
    "S",
    "BLE",
    "FBT",
    "B",
    "A",
    "COM",
    "C4",
    "DTZ",
    "T10",
    "DJ",
    "EM",
    "EXE",
    "FIX",
    "FA",
    "INT",
    "ISC",
    "ICN",
    "LOG",
    "G",
    "INP",
    "PIE",
    "T20",
    "PYI",
    "PT",
    "Q",
    "RSE",
    "RET",
    "SLF",
    "SIM",
    "SLOT",
    "TID",
    "TD",
    "TC",
    "ARG",
    "PTH",
    "FLY",
    "C90",
    "NPY",
    "PD",
    "PERF",
    "E",
    "F",
    "PGH",
    "PL",
    "UP",
    "FURB",
    "RUF",
    "TRY",
    "I"
]

ignore = [
    "I001",
    "COM812",
    "PLR0911",
    "PLR0913"
]

[tool.ruff.lint.per-file-ignores]
"**/test/*" = [
    "ANN",
    "INP",
    "S101",
    "PLR2004"
]